{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 27,
  "lineage": "21c07589-99ed-45e4-6b40-9b25e24742d6",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:loadbalancer/app/tf-lb-20251120045303715600000008/57a8b1d567372321",
            "arn_suffix": "app/tf-lb-20251120045303715600000008/57a8b1d567372321",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20251120045303715600000008-142446051.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:loadbalancer/app/tf-lb-20251120045303715600000008/57a8b1d567372321",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20251120045303715600000008",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0682edc7f5ebfc21a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024bf0c3e3cb3bb43"
              },
              {
                "subnet_id": "subnet-0e924d8614c379054"
              }
            ],
            "subnets": [
              "subnet-024bf0c3e3cb3bb43",
              "subnet-0e924d8614c379054"
            ],
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "vpc_id": "vpc-0c2a51de1a892dca5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:loadbalancer/app/tf-lb-20251120045303715600000008/57a8b1d567372321"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:listener/app/tf-lb-20251120045303715600000008/57a8b1d567372321/905e2f0c5c84a73f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:targetgroup/tf-20251120045259033600000002/99c72075381b7923",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:listener/app/tf-lb-20251120045303715600000008/57a8b1d567372321/905e2f0c5c84a73f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:loadbalancer/app/tf-lb-20251120045303715600000008/57a8b1d567372321",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:listener/app/tf-lb-20251120045303715600000008/57a8b1d567372321/905e2f0c5c84a73f"
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.instance",
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:targetgroup/tf-20251120045259033600000002/99c72075381b7923",
            "arn_suffix": "targetgroup/tf-20251120045259033600000002/99c72075381b7923",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:targetgroup/tf-20251120045259033600000002/99c72075381b7923",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20251120045259033600000002",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:972583818888:targetgroup/tf-20251120045259033600000002/99c72075381b7923"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group/sg-0682edc7f5ebfc21a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0682edc7f5ebfc21a",
            "ingress": [],
            "name": "terraform-20251120045259032200000001",
            "name_prefix": "terraform-",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sg-0682edc7f5ebfc21a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group/sg-0c155c903ec69c2bb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c155c903ec69c2bb",
            "ingress": [],
            "name": "terraform-20251120045259034900000003",
            "name_prefix": "terraform-",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sg-0c155c903ec69c2bb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-00f05d92625ac95c7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00f05d92625ac95c7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0682edc7f5ebfc21a",
            "security_group_rule_id": "sgr-00f05d92625ac95c7",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-00f05d92625ac95c7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "instance_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-01e7e0f28514ea4dd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01e7e0f28514ea4dd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0c155c903ec69c2bb",
            "security_group_rule_id": "sgr-01e7e0f28514ea4dd",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-01e7e0f28514ea4dd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_ttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-0e06edd2c186cc056",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e06edd2c186cc056",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0682edc7f5ebfc21a",
            "security_group_rule_id": "sgr-0e06edd2c186cc056",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-0e06edd2c186cc056",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "instance_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-049a5a19dca5a091a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-049a5a19dca5a091a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0c155c903ec69c2bb",
            "security_group_rule_id": "sgr-049a5a19dca5a091a",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-049a5a19dca5a091a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "intance_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:security-group-rule/sgr-082010573f3fbe26f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-082010573f3fbe26f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0c155c903ec69c2bb",
            "security_group_rule_id": "sgr-082010573f3fbe26f",
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "sgr-082010573f3fbe26f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.instance",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a82bb8475f64cd46",
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:elastic-ip/eipalloc-0a82bb8475f64cd46",
            "domain": "vpc",
            "id": "eipalloc-0a82bb8475f64cd46",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-182-185-157.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.182.185.157",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:internet-gateway/igw-06f9045377dc68ebe",
            "id": "igw-06f9045377dc68ebe",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a82bb8475f64cd46",
            "association_id": "eipassoc-008a9da1092f81e9c",
            "connectivity_type": "public",
            "id": "nat-0abc4b3a9bca53dbd",
            "network_interface_id": "eni-0f4b25c8d5c527257",
            "private_ip": "10.0.10.189",
            "public_ip": "57.182.185.157",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e924d8614c379054",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:route-table/rtb-00623bd889d19b065",
            "id": "rtb-00623bd889d19b065",
            "owner_id": "972583818888",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0abc4b3a9bca53dbd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "rtb-00623bd889d19b065",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:route-table/rtb-0984cd91c3702e5de",
            "id": "rtb-0984cd91c3702e5de",
            "owner_id": "972583818888",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f9045377dc68ebe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "rtb-0984cd91c3702e5de",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3dd476ebb603d36",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-00623bd889d19b065",
            "subnet_id": "subnet-0d016cb136932e4c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025e1a7b344466095",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-00623bd889d19b065",
            "subnet_id": "subnet-014d9ef13ee947da3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02aeedd0777ba4594",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0984cd91c3702e5de",
            "subnet_id": "subnet-0e924d8614c379054"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0206be203355fb382",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0984cd91c3702e5de",
            "subnet_id": "subnet-024bf0c3e3cb3bb43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-0d016cb136932e4c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d016cb136932e4c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-0d016cb136932e4c0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-014d9ef13ee947da3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014d9ef13ee947da3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-014d9ef13ee947da3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-0e924d8614c379054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e924d8614c379054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-0e924d8614c379054",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:subnet/subnet-024bf0c3e3cb3bb43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024bf0c3e3cb3bb43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972583818888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            },
            "vpc_id": "vpc-0c2a51de1a892dca5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "subnet-024bf0c3e3cb3bb43",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:972583818888:vpc/vpc-0c2a51de1a892dca5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c88de04ae6bceeae",
            "default_route_table_id": "rtb-0f91d3ae6d69906c1",
            "default_security_group_id": "sg-02df7f0b75292dee3",
            "dhcp_options_id": "dopt-03f2fcdacdff01321",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2a51de1a892dca5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f91d3ae6d69906c1",
            "owner_id": "972583818888",
            "region": "ap-northeast-1",
            "tags_all": {
              "Owner": "mutsuki",
              "project": "auto_scaling"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "972583818888",
            "id": "vpc-0c2a51de1a892dca5",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}